--- a/project1/webapp/view/TilePage.view.xml
+++ b/project1/webapp/view/TilePage.view.xml
@@ -1,53 +1,123 @@
-<mvc:View controllerName="sap.ui.com.project1.controller.TilePage"
-	xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-	xmlns="sap.m"
-	xmlns:ux="sap.uxap"
-	xmlns:core="sap.ui.core"
-	xmlns:layout="sap.ui.layout"
-	xmlns:l="sap.ui.layout"
-	xmlns:f="sap.f"
-	xmlns:card="sap.f.cards">
-	<App >
-		<Page  id="idPageTile" class="service-background" showHeader="true" enableScrolling="false">
-			<headerContent>
-				<Text text="{= 'Welcome ' + ${LoginModel>/EmployeeName} }" class="boldBlueText sapUiLargeMarginBegin" />
-				<ToolbarSpacer />
-				<Button press="Tile_onLogPress" icon="sap-icon://log" />
-			</headerContent>
-			<ux:ObjectPageLayout upperCaseAnchorBar="false" id="id_ObjectPageLayoutTile">
-				<ux:sections>
-					<ux:ObjectPageSection id="id_Sectiontile" titleUppercase="false" title="Home" visible="{= ${TileAccessModel>/Home} === '1' ? true : false}">
-						<ux:subSections>
-							<ux:ObjectPageSubSection titleUppercase="false">
-								<ux:blocks>
-									<layout:HorizontalLayout allowWrapping="true" class="sapUiTinyMargin">
-										<GenericTile visible="true" class="sapUiMediumMargin" header="Manage Rooms" press="TileV_onpressInbox">
-											<TileContent unit="Assign Rooms">
-												<ImageContent src="sap-icon://building" />
-											</TileContent>
-										</GenericTile>
-										<GenericTile visible="true" class="sapUiMediumMargin" header="Manage Room Details" press="TileV_onpressroomdetails">
-											<TileContent unit="Room Details">
-												<ImageContent src="sap-icon://detail-view" />
-											</TileContent>
-										</GenericTile>
-										<GenericTile visible="true" class="sapUiMediumMargin" header="Manage Bed Details" press="TileV_onpressbeddetails">
-											<TileContent unit="Bed Details">
-												<ImageContent src="sap-icon://bed" />
-											</TileContent>
-										</GenericTile>
-										<GenericTile visible="true" class="sapUiMediumMargin" header="Manage Extra Facilities" press="TileV_onpressextrafacilities">
-											<TileContent unit="Extra facilities">
-												<ImageContent src="sap-icon://activities" />
-											</TileContent>
-										</GenericTile>
-									</layout:HorizontalLayout>
-								</ux:blocks>
-							</ux:ObjectPageSubSection>
-						</ux:subSections>
-					</ux:ObjectPageSection>
-				</ux:sections>
-			</ux:ObjectPageLayout>
-		</Page>
-	</App>
+<mvc:View
+    controllerName="sap.ui.com.project1.controller.TilePage"
+    xmlns:mvc="sap.ui.core.mvc"
+    displayBlock="true"
+    xmlns="sap.m"
+    xmlns:ux="sap.uxap"
+    xmlns:core="sap.ui.core"
+    xmlns:layout="sap.ui.layout"
+    xmlns:l="sap.ui.layout"
+    xmlns:f="sap.f"
+    xmlns:card="sap.f.cards"
+>
+    <App>
+        <Page
+            id="idPageTile"
+            class="service-background"
+            showHeader="true"
+            enableScrolling="false"
+        >
+            <headerContent>
+                <Text
+                    text="{= 'Welcome ' + ${LoginModel>/EmployeeName} }"
+                    class="boldBlueText sapUiLargeMarginBegin"
+                />
+                <ToolbarSpacer />
+                <Button
+                    press="Tile_onLogPress"
+                    icon="sap-icon://log"
+                />
+            </headerContent>
+            <ux:ObjectPageLayout
+                upperCaseAnchorBar="false"
+                id="id_ObjectPageLayoutTile"
+            >
+                <ux:sections>
+                    <ux:ObjectPageSection
+                        id="id_Sectiontile"
+                        titleUppercase="false"
+                        title="Home"
+                        visible="{= ${TileAccessModel>/Home} === '1' ? true : false}"
+                    >
+                        <ux:subSections>
+                            <ux:ObjectPageSubSection titleUppercase="false">
+                                <ux:blocks>
+                                    <layout:HorizontalLayout
+                                        allowWrapping="true"
+                                        class="sapUiTinyMargin"
+                                    >
+                                        <GenericTile
+                                            visible="true"
+                                            class="sapUiMediumMargin"
+                                            header="Manage Rooms"
+                                            press="TileV_onpressInbox"
+                                        >
+                                            <TileContent unit="Assign Rooms">
+                                                <ImageContent
+                                                    src="sap-icon://building"
+                                                />
+                                            </TileContent>
+                                        </GenericTile>
+                                        <GenericTile
+                                            visible="true"
+                                            class="sapUiMediumMargin"
+                                            header="Manage Room Details"
+                                            press="TileV_onpressroomdetails"
+                                        >
+                                            <TileContent unit="Room Details">
+                                                <ImageContent
+                                                    src="sap-icon://detail-view"
+                                                />
+                                            </TileContent>
+                                        </GenericTile>
+                                        <GenericTile
+                                            visible="true"
+                                            class="sapUiMediumMargin"
+                                            header="Manage Bed Details"
+                                            press="TileV_onpressbeddetails"
+                                        >
+                                            <TileContent unit="Bed Details">
+                                                <ImageContent
+                                                    src="sap-icon://bed"
+                                                />
+                                            </TileContent>
+                                        </GenericTile>
+                                        <GenericTile
+                                            visible="true"
+                                            class="sapUiMediumMargin"
+                                            header="Manage Extra Facilities"
+                                            press="TileV_onpressextrafacilities"
+                                        >
+                                            <TileContent
+                                                unit="Extra facilities"
+                                            >
+                                                <ImageContent
+                                                    src="sap-icon://activities"
+                                                />
+                                            </TileContent>
+                                        </GenericTile>
+
+										   <GenericTile
+                                            visible="true"
+                                            class="sapUiMediumMargin"
+                                            header="Manage Bed Images"
+                                            press="TileV_onpressBedImages"
+                                        >
+                                            <TileContent
+                                                unit="Manage Bed Images"
+                                            >
+                                                <ImageContent
+                                                    src="sap-icon://card"
+                                                />
+                                            </TileContent>
+                                        </GenericTile>
+                                    </layout:HorizontalLayout>
+                                </ux:blocks>
+                            </ux:ObjectPageSubSection>
+                        </ux:subSections>
+                    </ux:ObjectPageSection>
+                </ux:sections>
+            </ux:ObjectPageLayout>
+        </Page>
+    </App>
 </mvc:View>
