VIEW Details  Chnages

--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -7,32 +7,30 @@
 	xmlns:f="sap.f" 
 	xmlns:fb="sap.ui.comp.filterbar" 
 	xmlns:svm="sap.ui.comp.smartvariants" height="100%">
-	<tnt:ToolPage>	
+	<tnt:ToolPage>
 		<tnt:header>
 			<tnt:ToolHeader>
-				<Image src="./image/LOGO.png" height="250px" width="250px" class="sapUiTinyMarginTop weblogo"  tooltip="Company Logo"/>
+				<Image src="./image/LOGO.png" height="250px" width="250px" class="sapUiTinyMarginTop weblogo" tooltip="Company Logo"/>
 				<!-- <Title level="H1" text="SHAH HOSTEL" class="custom-text"/> -->
 				<ToolbarSpacer/>
-				<Button  text="SIGN IN / SIGN UP"  id="loginButton" class=" sapUiSmallMarginTop loginButton" tooltip="{i18n>tooltipLogin}" press="onpressLogin">
+				<Button text="SIGN IN / SIGN UP" id="loginButton" class=" sapUiSmallMarginTop loginButton" tooltip="{i18n>tooltipLogin}" press="onpressLogin">
 					<layoutData>
 						<OverflowToolbarLayoutData priority="NeverOverflow"/>
 					</layoutData>
 				</Button>
-                <Avatar  visible="true" id="ProfileAvatar" initials="{profileData>/initials}"  displaySize="XS" tooltip="Profile pic" press="onPressAvatar"/>
+				<Avatar visible="true" id="ProfileAvatar" initials="{profileData>/initials}" displaySize="XS" tooltip="Profile pic" press="onPressAvatar"/>
 			</tnt:ToolHeader>
 		</tnt:header>
 		<tnt:subHeader>
 			<tnt:ToolHeader>
-               <!-- <ToolbarSpacer /> -->
-                 
-				<IconTabHeader id="mainTabHeader" select="onTabSelect" >
+				<!-- <ToolbarSpacer /> -->
+				<IconTabHeader id="mainTabHeader" select="onTabSelect">
 					<items >
 						<IconTabFilter key="idHome" text="Home" />
 						<IconTabFilter key="idRooms" text="Rooms"/>
 						<IconTabFilter key="idFacilities" text="Facilities"/>
 						<IconTabFilter key="idContact" text="Contact"/>
 						<!-- <IconTabFilter key="idAdddata" text="Add Data"/> -->
-						
 					</items>
 				</IconTabHeader>
 			</tnt:ToolHeader>
@@ -41,15 +39,14 @@
 			<NavContainer id="pageContainer">
 				<pages>
 					<ScrollContainer id="idHome" horizontal="false" vertical="true" height="100%" class="sapUiContentPadding Homepage sapUiTinyMargin">
-						<l:Grid defaultSpan="XL12 L12 M12 S12" width="100%" class="position-welcome" >
+						<l:Grid defaultSpan="XL12 L12 M12 S12" width="100%" class="position-welcome">
 							<VBox class="sapUiLargeMarginTop">
 								<Text class="custom-welcome sapUiTinyMarginTopBottom" textAlign="Center" text="Welcome To "/>
 								<Text class="custom-welcome  sapUiTinyMarginTopBottom " text="Shah Hostel"/>
 								<Text text="Your New Home Away to me" class="custom-tagline sapUiTinyMarginTop "/>
 							</VBox>
-						
 						</l:Grid>
-                         <Button text="Book Room" class="RoomBook sapUiLargeMarginBegin " press="onpressBookrooms" />
+						<Button text="Book Room" class="RoomBook sapUiLargeMarginBegin " press="onpressBookrooms" />
 					</ScrollContainer>
                     <Page id="idRooms" showHeader="false">
 					<!-- <HBox justifyContent="End">
@@ -108,6 +105,7 @@
                         text="₹ {VisibilityModel>Price}"
                         class="bedCardPrice"
                     />
+					<Button text="{= ${VisibilityModel>Visible} ? 'View Deatils' : 'Occupied' }" type="Default" press=".viewDetails" enabled="{VisibilityModel>Visible}" class="{= ${VisibilityModel>Visible} ? '' : 'soldOutButton' }" />		
                    <Button
                     text="{= ${VisibilityModel>Visible} ? 'Book Now' : 'Sold Out' }"
                     press=".onBookNow"
@@ -125,7 +123,7 @@
 					<ScrollContainer id="idFacilities" horizontal="false" vertical="true" height="100%" class="Products_list sapUiTinyMargin" >
 						<core:Fragment fragmentName="sap.ui.com.project1.fragment.HomePage" type="XML"/>
 					</ScrollContainer>
-					<ScrollContainer id="idContact" horizontal="false" vertical="true" height="100%" class="Products_list sapUiTinyMargin" >
+					<ScrollContainer id="idContact" horizontal="false" vertical="true" height="100%" class="Products_list sapUiTinyMargin">
 						<core:Fragment fragmentName="sap.ui.com.project1.fragment.ContactPage" type="XML"/>
 					</ScrollContainer>
 					<ScrollContainer id="idAdddata" horizontal="false" vertical="true" height="100%" class="sapUiContentPadding career-background sapUiTinyMargin">
@@ -136,4 +134,3 @@
 		</tnt:mainContents>
 	</tnt:ToolPage>
 </mvc:View>
-
