--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -801,5 +801,15 @@
 
 
 
+.selectedTile {
+    border: 2px solid #0070f2 !important;
+    box-shadow: 0 0 10px rgba(0, 112, 242, 0.3);
+    transform: scale(1.02);
+    transition: all 0.15s ease-in-out;
+}
+
+.sapMGT {
+    border-radius: 10px;
+}
 
 
