Refactor event handler names in Book_Room.view.xml for consistency
- Updated navigationChange event handler from "TC_handleNavigationChange" to "handleNavigationChange".
- Changed press event for Previous button from "TC_onDialogBackButton" to "onDialogBackButton".
- Modified press event for Next button from "TC_onDialogNextButton" to "onDialogNextButton".

--- a/project1/webapp/view/Book_Room.view.xml
+++ b/project1/webapp/view/Book_Room.view.xml
@@ -56,7 +56,7 @@
                 <Wizard
                     class="sapUiResponsivePadding--header sapUiResponsivePadding--content"
                     showNextButton="false"
-                    navigationChange="TC_handleNavigationChange"
+                    navigationChange="handleNavigationChange"
                     renderMode="Page"
                     id="TC_id_wizard"
                     finishButtonText="Step 4"
@@ -120,7 +120,7 @@
                 <Button
                     text="Previous"
                     visible="{OBTNModel>/PERVIOUSVIS}"
-                    press="TC_onDialogBackButton"
+                    press="onDialogBackButton"
                 />
                 <Button
                 id="IdNextBtn"
@@ -128,7 +128,7 @@
                     type="Emphasized"
                     enabled="{OBTNModel>/Next}"
                     visible="{OBTNModel>/NXTVis}"
-                    press="TC_onDialogNextButton"
+                    press="onDialogNextButton"
                 />
             </OverflowToolbar>
         </footer>
