--- a/project1/webapp/view/Bed_Images.view.xml
+++ b/project1/webapp/view/Bed_Images.view.xml
@@ -1,146 +1,224 @@
 <mvc:View
     controllerName="sap.ui.com.project1.controller.Bed_Images"
     xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m"
     xmlns:m="sap.m"
+    xmlns:suite="sap.suite.ui.commons"
+    xmlns="sap.uxap"
+    xmlns:uxap="sap.uxap"
+    xmlns:richtexteditor="sap.ui.richtexteditor"
+    xmlns:layout="sap.ui.layout"
+    xmlns:f="sap.ui.layout.form"
     xmlns:c="sap.ui.core"
-    xmlns:fb="sap.ui.comp.filterbar"
-    xmlns:core="sap.ui.core"
     displayBlock="true"
     height="100%"
+    xmlns:core="sap.ui.core"
     busyIndicatorDelay="0"
+    xmlns:u="sap.ui.unified"
 >
-    <Page showHeader="true">
-        <customHeader>
-            <Bar>
-                <contentLeft>
-                    <Button
-                        icon="sap-icon://nav-back"
-                        press=".onNavBack"
+    <m:Page
+        navButtonPress="BI_onButtonPress"
+        showNavButton="true"
+        title="Bed Details"
+    >
+        <m:headerContent>
+            <m:Button
+                press="onLogout"
+                icon="sap-icon://log"
+                tooltip="{i18n>logoutTooltip}"
+                type="Transparent"
+            />
+        </m:headerContent>
+        <ObjectPageLayout id="ObjectPageLayout">
+            <!-- <headerTitle><ObjectPageDynamicHeaderTitle><expandedHeading><m:Title text="{objectModel>/0/PurchaseOrder/0/CustomerName}" wrapping="true" /></expandedHeading><snappedHeading /></ObjectPageDynamicHeaderTitle></headerTitle><headerContent><m:FlexBox wrap="Wrap" fitContainer="true"><m:Avatar class="sapUiSmallMarginEnd" src="../image/logo.jpeg" displaySize="L" /><layout:VerticalLayout class="sapUiSmallMarginBeginEnd"><m:ObjectIdentifier title="Customer Address" text="{objectModel>/0/PurchaseOrder/0/Address}" tooltip="Customer Address" /></layout:VerticalLayout><layout:VerticalLayout class="sapUiSmallMarginBeginEnd"><m:ObjectIdentifier title="PAN Number" text="{objectModel>/0/PurchaseOrder/0/PAN}" tooltip="PAN Number" /></layout:VerticalLayout><layout:VerticalLayout class="sapUiSmallMarginBeginEnd"><m:ObjectIdentifier title="Type" text="{objectModel>/0/PurchaseOrder/0/Type}" tooltip="Type" /></layout:VerticalLayout></m:FlexBox></headerContent> -->
+            <sections>
+                <ObjectPageSection
+                    titleUppercase="false"
+                    id="purchaseOrderHeaderSection1"
+                    title="Bed Information"
+                >
+                    <subSections>
+                        <ObjectPageSubSection id="dsd1">
+                            <blocks>
+                                <f:SimpleForm
+                                    id="idsimpleCompanyDetails"
+                                    busyIndicatorDelay="0"
+                                    editable="true"
+                                    layout="ColumnLayout"
+                                    labelSpanXL="2"
+                                    labelSpanL="3"
+                                    labelSpanM="2"
+                                    labelSpanS="12"
+                                    adjustLabelSpan="false"
+                                    emptySpanXL="0"
+                                    emptySpanL="0"
+                                    emptySpanM="0"
+                                    emptySpanS="0"
+                                    columnsXL="3"
+                                    columnsL="2"
+                                    columnsM="2"
+                                    singleContainerFullSize="false"
+                                >
+                                    <f:content>
+                                        <m:Label
+                                            text="Branch Code"
+                                            required="true"
+                                        />
+                                        <m:ComboBox
+                                            id="idRoomType12"
+                                            placeholder="Select branch Code"
+                                            selectedKey="{BedImageModel>/BranchCode}"
+                                            items="{BranchModel>/}"
+                                            change="onbranchChange"
+                                            showSecondaryValues="true"
+                                            valueStateText="Select Branch Code"
+                                            editable="{editable>/Edit}"
+                                        >
+                                            <core:ListItem
+                                                key="{BranchModel>BranchID}"
+                                                text="{BranchModel>BranchID}"
+                                                additionalText="{BranchModel>Name}"
+                                            />
+                                        </m:ComboBox>
+                                        <m:Label
+                                            text="Bed Type"
+                                            required="true"
+                                        />
+                                        <!-- <ComboBox id="idBedType" placeholder="Select Bed Type" selectedKey="{BedModel>/Name}"><core:ListItem key="Single Bed" text="Single Bed" /><core:ListItem key="Double Bed" text="Double Bed" /><core:ListItem key="Four Bed" text="Four Bed" /> -->
+                                        <m:Input
+                                            id="idBedType"
+                                            value="{BedImageModel>/Name}"
+                                            placeholder="Enter Bed Type"
+                                            maxLength="60"
+                                            liveChange="onNameInputLiveChange"
+                                            valueStateText="Enter Bed Type"
+                                            editable="{editable>/Edit}"
+                                        />
+                                        <m:Label
+                                            text="Room Type"
+                                            required="true"
+                                        />
+                                        <m:ComboBox
+                                            id="idRoomtype"
+                                            placeholder="Select Room type"
+                                            selectedKey="{BedImageModel>/ACType}"
+                                            change="onbranchChange"
+                                            valueStateText="Select Room Type"
+                                            editable="{editable>/Edit}"
+                                        >
+                                            <core:ListItem
+                                                key="AC"
+                                                text="AC"
+                                            />
+                                            <core:ListItem
+                                                key="Non-Ac"
+                                                text="Non-Ac"
+                                            />
+                                        </m:ComboBox>
+                                        <m:Label
+                                            text="No Of Person"
+                                            required="true"
+                                        />
+                                        <m:Input
+                                            id="idR"
+                                            value="{BedImageModel>/NoOfPerson}"
+                                            placeholder="Enter No Of person"
+                                            liveChange="onNameInputLiveChange"
+                                            type="Number"
+                                            valueStateText="Enter No of person"
+                                            editable="{editable>/Edit}"
+                                        />
+                                        <m:Label
+                                            text="Max no of rooms"
+                                            required="true"
+                                        />
+                                        <m:Input
+                                            id="id_MaxBeds"
+                                            value="{BedImageModel>/MaxBeds}"
+                                            placeholder="Enter No of rooms"
+                                            liveChange="onNameInputLiveChange"
+                                            type="Number"
+                                            valueStateText="Enter Max no of rooms"
+                                            editable="{editable>/Edit}"
+                                        />
+                                        <m:Label
+                                            text="Description"
+                                            required="true"
+                                        />
+                                        <m:TextArea
+                                            id="id_Description"
+                                            value="{BedImageModel>/Description}"
+                                            placeholder="Enter No Of Description"
+                                            liveChange="onNameInputLiveChange"
+                                            valueStateText="Enter Description"
+                                            maxLength="100"
+                                            editable="{editable>/Edit}"
+                                        />
+                                    </f:content>
+                                </f:SimpleForm>
+                            </blocks>
+                        </ObjectPageSubSection>
+                    </subSections>
+                </ObjectPageSection>
+                <ObjectPageSection
+                    titleUppercase="false"
+                    id="purchaseOrderSection"
+                    title="Bed Images"
+                >
+                    <subSections>
+                        <ObjectPageSubSection id="POO_Purchaseordersection">
+                            <blocks>
+                                <m:HBox
+                                    id="idImagesContainer"
+                                    wrap="true"
+                                    justifyContent="Start"
+                                    alignItems="Start"
+                                    class="sapUiSmallMargin"
+                                    items="{DisplayImagesModel>/DisplayImages}"
+                                >
+                                    <m:VBox
+                                        class="sapUiSmallMarginEnd"
+                                        width="150px"
+                                        alignItems="Center"
+                                    >
+                                        <m:Image
+                                            src="{DisplayImagesModel>src}"
+                                            width="120px"
+                                            height="120px"
+                                        />
+                                        <m:Text
+                                            text="{DisplayImagesModel>fileName}"
+                                            textAlign="Center"
+                                            wrapping="true"
+                                        />
+                                     
+                                    </m:VBox>
+                                </m:HBox>
+                            </blocks>
+                        </ObjectPageSubSection>
+                    </subSections>
+                </ObjectPageSection>
+            </sections>
+        </ObjectPageLayout>
+        <m:footer>
+            <m:Bar id="IA_id_FooterBar">
+                <m:contentRight>
+                    <m:Button
+                        id="BI_ideditButton"
+                        visible="{= !${editable>/Edit} }"
+                        text="Edit"
+                        type="Transparent"
+                        press="BI_onEditButtonPress"
                     />
-                    <Title
-                        text="Shah Hostel"
-                        class="customPageTitle"
+
+                    <m:Button
+                        id="POO_idSaveButton"
+                        visible="{=${editable>/Edit}}"
+                        text="Save"
+                        type="Accept"
+                        press="BT_onsavebuttonpress"
                     />
-                </contentLeft>
-                <contentRight>
-                    <Button
-                        icon="sap-icon://log"
-                        press=".onHome"
-                    />
-                </contentRight>
-            </Bar>
-        </customHeader>
-        <content>
-            <fb:FilterBar
-                id="FO_id_FilterbarEmployee"
-                persistencyKey="myPersKey"
-                useToolbar="false"
-                clear="FC_onPressClear"
-                showClearOnFB="true"
-                search="FC_onSearch"
-                filterChange="IA_.onFilterChange"
-                afterVariantLoad="IA_.onAfterVariantLoad"
-                showFilterConfiguration="false"
-                filterContainerWidth="auto"
-            >
-                <fb:filterGroupItems>
-                    <fb:FilterGroupItem
-                        name="Bed Type"
-                        label="Bed Type"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
-                        <fb:control>
-                            <ComboBox
-                                id="FN_id_BedType"
-                                items="{Facilities>/}"
-                                showClearIcon="true"
-                            >
-                                <core:Item
-                                    key="{Facilities>FacilityName}"
-                                    text="{Facilities>FacilityName}"
-                                />
-                            </ComboBox>
-                        </fb:control>
-                    </fb:FilterGroupItem>
-                </fb:filterGroupItems>
-                <fb:filterGroupItems>
-                    <fb:FilterGroupItem
-                        name="Branch Code"
-                        label="Branch Code"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
-                        <fb:control>
-                            <ComboBox
-                                id="FN_id_BranchCode"
-                                items="{Facilities>/}"
-                                showClearIcon="true"
-                            >
-                                <core:ListItem
-                                    key="{Facilities>BranchCode}"
-                                    text="{Facilities>BranchCode}"
-                                />
-                            </ComboBox>
-                        </fb:control>
-                    </fb:FilterGroupItem>
-                </fb:filterGroupItems>
-            </fb:FilterBar>
-            <Table
-                id="id_facilityTable"
-                sticky="ColumnHeaders,HeaderToolbar"
-                mode="SingleSelectLeft"
-                width="auto"
-                busyIndicatorDelay="0"
-                class="sapUiResponsiveMargin"
-                items="{path: 'Facilities>/'}"
-            >
-                <headerToolbar>
-                    <OverflowToolbar>
-                        <Title text="facilities ({=${Facilities>/}.length})" />
-                        <ToolbarSpacer />
-                        <Button
-                            text="Add Bed Images"
-                            press="FD_RoomDetails"
-                            type="Accept"
-                        />
-                        <Button
-                            text="Edit"
-                            press="FD_EditDetails"
-                            type="Transparent"
-                        />
-                    </OverflowToolbar>
-                </headerToolbar>
-                <columns>
-                    <Column demandPopin="true">
-                        <Text text="Branch Code" />
-                    </Column>
-                    <Column demandPopin="true">
-                        <Text text="Bed Type" />
-                    </Column>
-                    <Column demandPopin="true">
-                        <Text text="Room Type" />
-                    </Column>
-                </columns>
-                <items>
-                    <ColumnListItem>
-                        <cells>
-                            <Text text="{Facilities>BranchCode}" />
-                            <Text text="{Facilities>FacilityName}" />
-                            <Text text="{Facilities>Type}" />
-                            <Text
-                                text="{= ${Facilities>Price} ? ${Facilities>Price}+ ' ' + ${Facilities>Currency} + ' ' + ${Facilities>UnitText} : '' }"
-                            />
-                            <Button
-                                text="View"
-                                press="FC_viewroom"
-                                type="Transparent"
-                            />
-                        </cells>
-                    </ColumnListItem>
-                </items>
-            </Table>
-        </content>
-    </Page>
+                </m:contentRight>
+            </m:Bar>
+        </m:footer>
+    </m:Page>
 </mvc:View>
