--- a/project1/webapp/view/Hostel.view.xml
+++ b/project1/webapp/view/Hostel.view.xml
@@ -1,11 +1,11 @@
-<mvc:View controllerName="sap.ui.com.project1.controller.Hostel" displayBlock="true" 
-	xmlns:mvc="sap.ui.core.mvc" 
-	xmlns="sap.m" 
-	xmlns:l="sap.ui.layout" 
-	xmlns:core="sap.ui.core" 
-	xmlns:tnt="sap.tnt" 
-	xmlns:f="sap.f" 
-	xmlns:fb="sap.ui.comp.filterbar" 
+<mvc:View controllerName="sap.ui.com.project1.controller.Hostel" displayBlock="true"
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns="sap.m"
+	xmlns:l="sap.ui.layout"
+	xmlns:core="sap.ui.core"
+	xmlns:tnt="sap.tnt"
+	xmlns:f="sap.f"
+	xmlns:fb="sap.ui.comp.filterbar"
 	xmlns:svm="sap.ui.comp.smartvariants" height="100%">
 	<tnt:ToolPage>
 		<tnt:header>
@@ -48,33 +48,106 @@
 						</l:Grid>
 						<Button text="Book Room" class="RoomBook sapUiLargeMarginBegin " press="onpressBookrooms" />
 					</ScrollContainer>
-                    <Page id="idRooms" showHeader="false">
-					<!-- <HBox justifyContent="End">
-						<Button text="Filter" icon="sap-icon://map" press="onpressFilter" width="200px" class="sapUiTinyMargin"/>
-					</HBox> -->
-					<ScrollContainer  horizontal="false" vertical="true" height="80%" class="sapUiContentPadding HostelRooms sapUiTinyMargin">
-					
-						<l:Grid defaultSpan="XL12 L12 M12 S12" width="100%" class="position-welcome">
-							<VBox class="sapUiLargeMarginTop">
-								<Text class="Welcomeroomtext sapUiTinyMarginTopBottom" textAlign="Center" text="Book Your Room "/>
-								<Text class="Welcomeroomtext  sapUiTinyMarginTopBottom " text="Shah Hostel"/>
-								<Text text="Your New Home Away to me" class="Welcomeroomtext sapUiTinyMarginTop "/>
-							</VBox>
-								<HBox width="100%" justifyContent="End" alignItems="Center">
-                       </HBox>
-
-						</l:Grid>
-					</ScrollContainer>
-	<Button text="Filter" icon="sap-icon://map" press="onpressFilter" width="200px" class="sapUiLargeMarginBegin sapUiSmallMarginTop"/>
-	
-<ScrollContainer
+					<Page id="idRooms" showHeader="false">
+						<!-- <HBox justifyContent="End"><Button text="Filter" icon="sap-icon://map" press="onpressFilter" width="200px" class="sapUiTinyMargin"/></HBox> -->
+						<ScrollContainer  horizontal="false" vertical="true" height="80%" class="sapUiContentPadding HostelRooms sapUiTinyMargin">
+							<l:Grid defaultSpan="XL12 L12 M12 S12" width="100%" class="position-welcome">
+								<VBox class="sapUiLargeMarginTop">
+									<Text class="Welcomeroomtext sapUiTinyMarginTopBottom" textAlign="Center" text="Book Your Room "/>
+									<Text class="Welcomeroomtext  sapUiTinyMarginTopBottom " text="Shah Hostel"/>
+									<Text text="Your New Home Away to me" class="Welcomeroomtext sapUiTinyMarginTop "/>
+								</VBox>
+								<HBox width="100%" justifyContent="End" alignItems="Center"></HBox>
+							</l:Grid>
+						</ScrollContainer>
+						<ScrollContainer
     height="100%"
     horizontal="true"
     vertical="true"
     focusable="true"
     class="sapUiContentPadding"
 >
-    <FlexBox
+							<fb:FilterBar
+                id="filterbar"
+                persistencyKey="myPersKey"
+                useToolbar="false"
+                clear="FC_onPressClear"
+                showClearOnFB="true"
+                search="onSearchRooms"
+                filterChange="IA_.onFilterChange"
+                afterVariantLoad="IA_.onAfterVariantLoad"
+                showFilterConfiguration="false"
+                filterContainerWidth="auto"
+            >
+								<fb:filterGroupItems>
+									<!--  Branch Name -->
+									<fb:FilterGroupItem
+                name="Branch"
+                label="Branch Name"
+                groupName="Group1"
+                visibleInFilterBar="true"
+            >
+										<fb:control>
+											<ComboBox
+                        id="id_Branch"
+                        placeholder="Select Branch"
+                        showClearIcon="true"
+                        enabled="true"
+                        items="{sBRModel>/}"
+                        selectionChange=".onBranchSelectionChange"
+                    >
+												<core:ListItem
+                            key="{sBRModel>BranchID}"
+                            text="{sBRModel>Name}"
+                        />
+											</ComboBox>
+										</fb:control>
+									</fb:FilterGroupItem>
+									<!-- Area -->
+									<fb:FilterGroupItem
+                name="Area"
+                label="Area"
+                groupName="Group1"
+                visibleInFilterBar="true"
+            >
+										<fb:control>
+											<ComboBox
+                        id="id_Area"
+                        placeholder="Select Area"
+                        showClearIcon="true"
+                        enabled="false"
+                        items="{AreaModel>/}"
+                        selectionChange=".onAreaSelectionChange"
+                    >
+												<core:ListItem
+                            key="{AreaModel>BranchID}"
+                            text="{AreaModel>Address}"
+                        />
+											</ComboBox>
+										</fb:control>
+									</fb:FilterGroupItem>
+									<!--  Room Type -->
+									<fb:FilterGroupItem
+                name="RoomType"
+                label="Room Type"
+                groupName="Group1"
+                visibleInFilterBar="true"
+            >
+										<fb:control>
+											<ComboBox
+                        id="id_Roomtype"
+                        placeholder="Select Room Type"
+                        showClearIcon="true"
+                        enabled="false"
+                    >
+												<core:Item key="AC" text="AC" />
+												<core:Item key="Non-AC" text="Non-AC" />
+											</ComboBox>
+										</fb:control>
+									</fb:FilterGroupItem>
+								</fb:filterGroupItems>
+							</fb:FilterBar>
+							<FlexBox
         id="idBedTypeFlex"
         wrap="Wrap"
 		direction="Row"
@@ -84,43 +157,37 @@
             path: 'VisibilityModel>/BedTypes'
         }"
     >
-         <items >
-            <VBox class="bedCard sapUiMediumMargin"   visible="{VisibilityModel>Visible}">
-                <Image
+								<items >
+									<VBox class="bedCard sapUiMediumMargin"   visible="{VisibilityModel>Visible}">
+										<Image
                     src="{VisibilityModel>Image}"
                     width="100%"
                     height="300px"
                     class="bedCardImage"
                 />
-                <VBox class="bedCardContent sapUiSmallMargin">
-                    <Text
+										<VBox class="bedCardContent sapUiSmallMargin">
+											<Text
                         text="{= ${VisibilityModel>Name} + ' (' + ${VisibilityModel>ACType} + ')' }" 
                         class="bedCardTitle"
                     />
-                    <Text
+											<Text
                         text="{VisibilityModel>Description}"
                         class="bedCardDesc"
                         wrapping="true"
                     />
-                    <Text
+											<Text
                         text="₹ {VisibilityModel>Price}"
                         class="bedCardPrice"
                     />
-					<Button text="{= ${VisibilityModel>Visible} ? 'View Deatils' : 'Occupied' }" type="Default" press=".viewDetails" enabled="{VisibilityModel>Visible}" class="{= ${VisibilityModel>Visible} ? '' : 'soldOutButton' }" />		
-                   <Button
-                    text="{= ${VisibilityModel>Visible} ? 'Book Now' : 'Sold Out' }"
-                    press=".onBookNow"
-                    enabled="{VisibilityModel>Visible}"
-                />
-                </VBox>
-            </VBox>
-        </items>
-    </FlexBox>
-</ScrollContainer>
-
-<!-- </l:Grid> -->
-
-                    </Page>
+					<Button text="{= ${VisibilityModel>Visible} ? 'View Deatils' : 'Occupied' }" type="Default" press=".viewDetails" enabled="{VisibilityModel>Visible}" class="{= ${VisibilityModel>Visible} ? '' : 'soldOutButton' }" />
+					<Button text="{= ${VisibilityModel>Visible} ? 'Book Now' : 'Sold Out' }" press=".onBookNow" enabled="{VisibilityModel>Visible}"/>
+										</VBox>
+									</VBox>
+								</items>
+							</FlexBox>
+						</ScrollContainer>
+						<!-- </l:Grid> -->
+					</Page>
 					<ScrollContainer id="idFacilities" horizontal="false" vertical="true" height="100%" class="Products_list sapUiTinyMargin" >
 						<core:Fragment fragmentName="sap.ui.com.project1.fragment.HomePage" type="XML"/>
 					</ScrollContainer>
