--- a/project1/webapp/view/Bed_Images.view.xml
+++ b/project1/webapp/view/Bed_Images.view.xml
@@ -167,7 +167,7 @@
                     <subSections>
                         <ObjectPageSubSection id="POO_Purchaseordersection">
                             <blocks>
-                                <m:HBox
+                                <m:HBox 
                                     id="idImagesContainer"
                                     wrap="true"
                                     justifyContent="Start"
@@ -184,6 +184,7 @@
                                             src="{DisplayImagesModel>src}"
                                             width="120px"
                                             height="120px"
+                                            press="onImagePress"
                                         />
                                         <m:Text
                                             text="{DisplayImagesModel>fileName}"
